env.example update

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 DB_USER = User_DB
 DB_PASS = password_user_DB
-DB_HOST = cluster0.mooxj.mongodb.net
+DB_HOST = DB_URL
 TOKEN_AUTH = RANDOM_TOKEN_SECRET
